pgadmin/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
        - name: pgadmin
          image: elestio/pgadmin:REL-9_8
          volumeMounts:
            - name: pgadmin
              mountPath: /pgadmin4
      volumes:
        - name: pgadmin
          persistentVolumeClaim:
            claimName: pgadmin
