pgadmin/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
spec:
  type: ClusterIP
  selector:
    app: pgadmin
  ports:
    - name: http
      port: 80
      targetPort: 8080
