pgadmin/route.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pgadmin
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`pgadmin.deploywizard.in`)
      services:
        - name: pgadmin
          port: 80
